@@ -1,3 +1,6 @@
+Alastair S - Tue Mar 22 2005
+	bluecube now in colour for the photo
+
 Courtney Cavin - Thu Mar 17 2005
 	backlight timer implemented
 	max item length for scroller upped to 440px
